<resources>
    <string name="app_name">Senon</string>
    <string name="sensor_icon">Sensor icon</string>
    <string name="error_details">Error Details:</string>
    <string name="test_summary">Test Summary</string>
    <string name="total">Total</string>
    <string name="working">Working</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="duration">Duration:</string>
    <string name="completed">Completed:</string>
    <string name="share_results">Share Results</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="retest_all_sensors">Retest All Sensors</string>
    <string name="individual_results">Individual Results</string>
    <string name="no_test_results_available">No test results available</string>
    <string name="location_icon">Location icon</string>
    <string name="location_gps">Location (GPS)</string>
    <string name="status">Status:</string>
    <string name="ready">READY</string>
    <string name="start_test">Start Test</string>
    <string name="stop_test">Stop Test</string>
    <string name="location_data">Location Data</string>
    <string name="camera_icon">Camera icon</string>
    <string name="camera">Camera</string>
    <string name="camera_information">Camera Information</string>
    <string name="microphone_icon">Microphone icon</string>
    <string name="microphone">Microphone</string>
    <string name="audio_level">Audio Level</string>
    <string name="hardware_testing">Hardware Testing</string>
    <string name="x_tests">9 Tests</string>
    <string name="location">Location</string>
    <string name="location_n_gps">Location\n(GPS)</string>
    <string name="preferences">preferences</string>
    <string name="vibration_icon">Vibration icon</string>
    <string name="vibration">Vibration</string>
    <string name="bluetooth_icon">Bluetooth icon</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="speakers_icon">Speakers icon</string>
    <string name="speakers">Speakers</string>
    <string name="screen_icon">Screen icon</string>
    <string name="screen">Screen</string>
    <string name="touch_icon">Touch icon</string>
    <string name="touch_n_tap">Touch\n(Tap)</string>
    <string name="nfc_icon">NFC icon</string>
    <string name="nfc">NFC</string>
    <string name="wifi_icon">WiFi icon</string>
    <string name="wifi">WiFi</string>
    <string name="internet_icon">Internet icon</string>
    <string name="internet">Internet</string>
    <string name="compass_icon">Compass icon</string>
    <string name="device_sensors">Device Sensors</string>
    <string name="loading">Loading...</string>
    <string name="no_sensors_found">No Sensors Found</string>
    <string name="this_device_doesn_t_have_any_detectable_sensors">This device doesn\'t have any detectable sensors</string>
    <string name="auto_test_all_sensors">Auto test all sensors</string>
    <string name="sensor_specifications">Sensor Specifications</string>
    <string name="test_controls">Test Controls</string>
    <string name="reset">Reset</string>
    <string name="real_time_data">Real-time Data</string>
    <string name="live">LIVE</string>
    <string name="active">ACTIVE</string>
    <string name="start_time">Start Time</string>
</resources>